Package_Tools/include-C/ImageMagick-6/magick/in_arbeiit/fertig/histogram.h

/*
  Copyright 1999 ImageMagick Studio LLC, a non-profit organization
  dedicated to making software imaging solutions freely available.
  
  You may not use this file except in compliance with the License.  You may
  obtain a copy of the License at
  
    https://imagemagick.org/script/license.php
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  MagickCore histogram methods.
*/
#ifndef MAGICKCORE_HISTOGRAM_H
#define MAGICKCORE_HISTOGRAM_H

typedef struct _ColorPacket
{
  PixelPacket
    pixel;

  IndexPacket
    index;

  MagickSizeType
    count;
} ColorPacket;

extern  ColorPacket
  *GetImageHistogram(const Image *,size_t *,ExceptionInfo *);

extern  Image
  *UniqueImageColors(const Image *,ExceptionInfo *);

extern  MagickBooleanType
  IdentifyPaletteImage(const Image *,ExceptionInfo *);
extern  MagickBooleanType
  IsHistogramImage(const Image *,ExceptionInfo *);
extern  MagickBooleanType
  IsPaletteImage(const Image *,ExceptionInfo *);
extern  MagickBooleanType
  MinMaxStretchImage(Image *,const ChannelType,const double,const double);

extern  size_t
  GetNumberColors(const Image *,FILE *,ExceptionInfo *);